--- a/wasipage.html
+++ b/wasipage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>WASI TECH BOT </title>
+  <title>SHADOW MD BOT </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -12,7 +12,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-color: black;
+      background-color: rainbow;
     }
 
     .btn {
@@ -20,7 +20,7 @@
       --color2: rgb(0, 0, 0);
       width: 200px;
       padding: 0.8em 1.75em;
-      background-color: green;
+      background-color: blue;
       border-radius: 6px;
       border: .3px solid var(--color);
       transition: .5s;
@@ -76,7 +76,7 @@
 </head>
 <body>
 
-  <button onclick="window.open(`/wasiqr`)" class="btn">QR Code</button>
+  <button onclick="window.open(`/shadowqr`)" class="btn">QR Code</button>
   <button onclick="window.open(`/pair`)" class="btn">Pair Code</button>
   <button onclick="window.open(`https://github.com/carlydopeboii/SHADOW-MD-BOT`)" class="btn">Bot Repo</button>
   <button onclick="window.open(`https://wa.me/50946351133`)" class="btn">Contact Me</button>
