--- a/wasipage.html
+++ b/wasipage.html
@@ -12,7 +12,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-color: rainbow;
+      background-color: orange, yellow, lawn green, blue, purple,red;
     }
 
     .btn {
