--- a/wasipage.html
+++ b/wasipage.html
@@ -12,17 +12,12 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-color: orange, yellow, lawngreen, blue, purple,red;
+      background-color: fuchsia;
     }
 
     .btn {
       --color: #e5f5f1;
-      --color2: rgb(255, 165, 0);
-      --color3: rgb(255, 255, 0);
-      --color4: rgb(124, 252, 0);
-      --color5: rgb(0, 0, 255);
-      --color6: rgb(128, 0, 128);
-      --color7: rgb(255, 0, 0);
+      --color2: rgb(255, 0, 255);
       width: 200px;
       padding: 0.8em 1.75em;
       background-color: blue;
