--- a/pair.html
+++ b/pair.html
@@ -12,7 +12,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background: LightSkyBlue;
+      background: lightskyblue;
       font-family: Arial, sans-serif;
     }
 
@@ -49,10 +49,10 @@
 
     .input-container {
       display: flex;
-      background: rgb(10, 10, 10);
+      background: rgb(135, 206, 250);
       border-radius: 1rem;
-      background: black;
-      box-shadow: black;
+      background: lightskyblue;
+      box-shadow: lightskyblue;
       padding: 0.3rem;
       gap: 0.3rem;
       max-width: 300px;
