--- a/pair.html
+++ b/pair.html
@@ -49,10 +49,10 @@
 
     .input-container {
       display: flex;
-      background: rgb(135, 206, 250);
+      background: rgb(10, 10, 10);
       border-radius: 1rem;
-      background: lightskyblue;
-      box-shadow: lightskyblue;
+      background: black;
+      box-shadow: black;
       padding: 0.3rem;
       gap: 0.3rem;
       max-width: 300px;
