--- a/wasipage.html
+++ b/wasipage.html
@@ -12,15 +12,15 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-color: fuchsia;
+      background-color: lightpink;
     }
 
     .btn {
       --color: #e5f5f1;
-      --color2: rgb(255, 0, 255);
+      --color2: rgb(255, 182, 193);
       width: 200px;
       padding: 0.8em 1.75em;
-      background-color: blue;
+      background-color: LightSkyBlue;
       border-radius: 6px;
       border: .3px solid var(--color);
       transition: .5s;
