--- a/wasipage.html
+++ b/wasipage.html
@@ -20,7 +20,7 @@
       --color2: rgb(255, 20, 147);
       width: 200px;
       padding: 0.8em 1.75em;
-      background-color: DeepSkyBlue;
+      background-color: DodgerBlue;
       border-radius: 6px;
       border: .3px solid var(--color);
       transition: .5s;
