𝐒𝐇𝐀𝐃𝐎𝐖 𝐌𝐀𝐊𝐄 𝐀 𝐑𝐄𝐌𝐀𝐒𝐓𝐄𝐃 ʕʘ̅͜ʘ̅ʔ

--- a/wasipage.html
+++ b/wasipage.html
@@ -76,11 +76,10 @@
 </head>
 <body>
 
-  <button onclick="window.open(`/shadowqr`)" class="btn">QR Code</button>
+  <button onclick="window.open(`/wasiqr`)" class="btn">QR Code</button>
   <button onclick="window.open(`/pair`)" class="btn">Pair Code</button>
   <button onclick="window.open(`https://github.com/carlydopeboii/SHADOW-MD-BOT`)" class="btn">Bot Repo</button>
-  <button onclick="window.open(`https://wa.me/50946351133`)" class="btn">Contact Me</button>
-  <button onclick="window.open(`https://chat.whatsapp.com/L14FfkAgFCN9eXGe5Sqjqt`)" class="btn">Wa Group</button>
+  <button onclick="window.open(`https://wa.me/18098902736`)" class="btn">Contact Me</button>
   <button onclick="window.open(`https://instagram.com/dopeboiicarly`)" class="btn">Instagram</button>
   <button onclick="window.open(`www.youtube.com/@Shadow_wrld-f9z`)" class="btn">Youtube</button>
   
